--- a/website/templates/website/project_detail.html
+++ b/website/templates/website/project_detail.html
@@ -20,7 +20,7 @@
                 <br/>
                 <h4><strong>Candidate Projects:</strong> {{ project.project.all|length }}</h4>
                 <h4><strong>Projects Cloned:</strong> {{ cloned }}</h4>
-                <h4><strong>Projects Transformed:</strong> {{ project|calc_finished_projects }}</h4>
+                <h4><strong>Projects Transformed:</strong> {{ project|calc_finished_projects }} ({{ project|calc_remaining_projects }} still processing)</h4>
                 <br/>
                 {% for filter in values %}
                     <h5><strong>{{ filter.pfilter }}:</strong> {{ filter }}</h5>
