--- a/website/templates/website/project_detail.html
+++ b/website/templates/website/project_detail.html
@@ -20,7 +20,7 @@
                 <br/>
                 <h4><strong>Candidate Projects:</strong> {{ project.project.all|length }}</h4>
                 <h4><strong>Projects Cloned:</strong> {{ cloned }}</h4>
-                <h4><strong>Projects Transformed:</strong> {{ project|calc_finished_projects }} ({{ project|calc_remaining_projects }} still processing)</h4>
+                <h4><strong>Projects Transformed:</strong> {{ project|calc_finished_projects }}{% if not is_done %} ({{ project|calc_remaining_projects }} still processing){% endif %}</h4>
                 <br/>
                 {% for filter in values %}
                     <h5><strong>{{ filter.pfilter }}:</strong> {{ filter }}</h5>
@@ -29,8 +29,13 @@
                     {% endif %}
                 {% endfor %}
                 {% if is_done %}
+                {% if project|calc_finished_projects > 0 %}
                     <br/>
                     <h3><strong><a href="{% url 'website:download' project.slug %}">Download Benchmark</a> (zip)</strong></h3>
+                {% else %}
+                    <br/>
+                    <h3><strong>No download available - no projects match criteria</strong></h3>
+                {% endif %}
                 {% endif %}
 
                 {% comment %}
