dont show back to list link for non-users

--- a/website/templates/website/project_detail.html
+++ b/website/templates/website/project_detail.html
@@ -6,7 +6,9 @@
 {% block body %}
     <div class="container">
         {% include 'website/messages.html' %}
-        <a href="{% url 'website:project_list' %}">Back to all project selections</a><br/><br/>
+        {% if user.is_authenticated %}
+            <a href="{% url 'website:project_list' %}">Back to all project selections</a><br/><br/>
+        {% endif %}
         {% if not is_done %}
             <div class="alert alert-warning">This selector is still processing</div>
         {% endif %}
