different message if zip isnt made yet

--- a/website/templates/website/project_detail.html
+++ b/website/templates/website/project_detail.html
@@ -35,11 +35,12 @@
                 {% if is_done %}
                     <br/>
                     {% if project|calc_finished_projects > 0 %}
-                        <h3><strong><a href="{% url 'website:download' project.slug %}">Download Benchmark</a> (zip)</strong></h3>
                         {% if download_size > 0 %}
+                            <h3><strong><a href="{% url 'website:download' project.slug %}">Download Benchmark</a> (zip)</strong></h3>
                             <h4>({{ download_size|filesizeformat }})</h4>
                         {% else %}
-                            <h4>(archive is not generated - please be patient and only click the above link once)</h4>
+                            <h3><strong><a href="{% url 'website:download' project.slug %}">Generate Benchmark</a> (zip)</strong></h3>
+                            <h4>(please be patient and only click the above link once)</h4>
                         {% endif %}
                     {% else %}
                         <h3><strong>No download available - no projects match criteria</strong></h3>
