--- a/website/templates/website/project_detail.html
+++ b/website/templates/website/project_detail.html
@@ -78,7 +78,7 @@
                     <h3 class="panel-title">Share this project selection</h3>
                 </div>
                 <div class="panel-body">
-                    <p>Enter a PAClab username or email address to share this project selection.</p>
+                    <p>Enter any email address or a PAClab username to share this project selection.</p>
                     <form method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                         {% include 'website/form.html' with form=form %}
