--- a/website/templates/website/project_detail.html
+++ b/website/templates/website/project_detail.html
@@ -9,9 +9,6 @@
         {% if user.is_authenticated %}
             <a href="{% url 'website:project_list' %}">Back to all project selections</a><br/><br/>
         {% endif %}
-        {% if not project.enabled %}
-            <div class="alert alert-danger">NOTE: this selector is deleted</div>
-        {% endif %}
         {% if not is_done %}
             <div class="alert alert-warning">This selector is still processing</div>
         {% endif %}
@@ -20,6 +17,9 @@
                 <h1 class="panel-title"><strong>Project Selection</strong><div class="pull-right"><em>{{ project.slug }}</em></div></h1>
             </div>
             <div class="panel-body">
+                {% if project.enabled %}
+                    <div class="alert alert-danger">NOTE: this selector is deleted</div>
+                {% endif %}
                 <h4><strong>Selection Submitted:</strong> {{ project.submitted|naturaltime }}</h4>
                 <h4><strong>Submitted By:</strong> {{ project.user }}</h4>
                 <h4><strong>Dataset Origin:</strong> {{ project.input_dataset }}</h4>
