better coloring of links in cookie footer message

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -100,7 +100,7 @@
     <h4>Cookies Disclaimer</h4>
     <p>
         <a class="btn btn-primary pull-right" href="javascript:CookiesBanner.createCookiesBannerCookie();">I Agree</a>
-        Our site saves small pieces of text information (cookies) on your device in order to deliver better content and for statistical purposes. You can disable the usage of cookies by changing the settings of your browser. By browsing our website without changing the browser settings you grant us permission to store that information on your device. See our <a href="{% url 'website:privacy_policy' %}">Privacy Policy</a> and <a href="{% url 'website:tos' %}">Terms of Use Policy</a> for more details.
+        Our site saves small pieces of text information (cookies) on your device in order to deliver better content and for statistical purposes. You can disable the usage of cookies by changing the settings of your browser. By browsing our website without changing the browser settings you grant us permission to store that information on your device. See our <a href="{% url 'website:privacy_policy' %}" class="alert-link">Privacy Policy</a> and <a href="{% url 'website:tos' %}" class="alert-link">Terms of Use Policy</a> for more details.
     </p>
 </div>
 </body>
