--- a/website/templates/website/project_detail.html
+++ b/website/templates/website/project_detail.html
@@ -26,7 +26,14 @@
                 <br/>
                 <h4><strong>Discovered Projects:</strong> {{ project.project.all|length|intcomma }}</h4>
                 <h4><strong>Projects Cloned:</strong> {{ cloned|intcomma }}</h4>
-                <h4><strong>Benchmark Projects:</strong> {{ project|calc_finished_projects|intcomma }}{% if not is_done %} ({{ project|calc_remaining_projects }} still processing){% endif %}</h4>
+                {% if project|calc_finished_projects > 0 %}
+                    <h4><strong>Benchmark Projects:</strong> {{ project|calc_finished_projects|intcomma }}{% if not is_done %} ({{ project|calc_remaining_projects }} still processing){% endif %}</h4>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: {{ project|calc_remaining_percent }}%">
+                            <span class="sr-only">{{ project|calc_remaining_percent }}% Complete</span>
+                        </div>
+                    </div>
+                {% endif %}
                 <br/>
                 <h4><strong>Selection Criteria:</strong></h4>
                 {% for filter in values %}
