--- a/website/templates/website/editprofile.html
+++ b/website/templates/website/editprofile.html
@@ -136,7 +136,7 @@
                     </div>
                     <div class="modal-body">
                         <div>
-                            <img src="/media/defaultuser.jpg" alt="photo to crop" id="image" style="max-width: 100%;">
+                            <img src="/media/defaultuser.png" alt="photo to crop" id="image" style="max-width: 100%;">
                         </div>
                     </div>
                     <div class="modal-footer">
