--- a/website/templates/website/project_detail.html
+++ b/website/templates/website/project_detail.html
@@ -26,12 +26,15 @@
                 <br/>
                 <h4><strong>Discovered Projects:</strong> {{ project.project.all|length|intcomma }}</h4>
                 <h4><strong>Projects Cloned:</strong> {{ cloned|intcomma }}</h4>
-                {% if project|calc_finished_projects > 0 %}
-                    <h4><strong>Benchmark Projects:</strong> {{ project|calc_finished_projects|intcomma }}{% if not is_done %} ({{ project|calc_remaining_projects|intcomma }} still processing){% endif %}</h4>
+                {% calc_finished_projects project as finished_count %}
+                {% calc_remaining_projects project as remaining_count %}
+                {% calc_remaining_percent finished_count remaining_count as remaining_count %}
+                {% if finished_count > 0 %}
+                    <h4><strong>Benchmark Projects:</strong> {{ finished_count|intcomma }}{% if not is_done %} ({{ remaining_count|intcomma }} still processing){% endif %}</h4>
                     {% if not is_done %}
                         <div class="progress">
-                            <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: {{ project|calc_remaining_percent }}%">
-                                <span class="sr-only">{{ project|calc_remaining_percent }}% Complete</span>
+                            <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: {{ calc_remaining_percent }}%">
+                                <span class="sr-only">{{ calc_remaining_percent }}% Complete</span>
                             </div>
                         </div>
                     {% endif %}
@@ -47,7 +50,7 @@
                 {% if is_done %}
                     <br/>
                     <h4><strong>Dataset Generated:</strong> {{ project.fin_process|naturaltime }}</h4>
-                    {% if project|calc_finished_projects > 0 %}
+                    {% if finished_count > 0 %}
                         {% if download_size > 0 %}
                             <h3><strong><a href="{% url 'website:download' project.slug %}">Download Benchmark</a> (zip)</strong></h3>
                             <h4>({{ download_size|filesizeformat|intcomma }})</h4>
