--- a/website/templates/website/project_detail.html
+++ b/website/templates/website/project_detail.html
@@ -17,7 +17,7 @@
             {% endif %}
         {% endif %}
         <div class="panel panel-primary">
-            <div class="panel-heading">
+            <div class="panel-heading clearfix">
                 <h1 class="panel-title"><strong>Project Selection</strong><div class="pull-right"><em>{{ project.slug }}</em></div></h1>
             </div>
             <div class="panel-body">
