--- a/website/templates/website/projects.html
+++ b/website/templates/website/projects.html
@@ -49,8 +49,10 @@
                                 {{ finished_count|intcomma }}
                             {% endif %}</td>
                             <td>
-                                <a href="{% url 'website:project_detail' slug=project.slug %}" class="btn btn-primary"><span class="glyphicon glyphicon-eye-open"></span> View</a>
-                                <a href="{% url 'website:project_delete' slug=project.slug %}" class="btn btn-danger"{% if not project.enabled %} disabled="disabled"{% endif %}><span class="glyphicon glyphicon-trash"></span> Delete</a>
+                                <div class="btn-group">
+                                    <a href="{% url 'website:project_detail' slug=project.slug %}" class="btn btn-primary"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> View</a>
+                                    <a href="{% url 'website:project_delete' slug=project.slug %}" class="btn btn-danger"{% if not project.enabled %} disabled="disabled"{% endif %}><span class="glyphicon glyphicon-trash" aria-hidden="true"></span><span class="sr-only">Delete</span></a>
+                                </div>
                             </td>
                         </tr>
                     {% empty%}
