--- a/website/templates/website/projects.html
+++ b/website/templates/website/projects.html
@@ -43,15 +43,15 @@
                             <td><a href="{% url 'website:project_detail' slug=project.slug %}">{{ project.slug }}</a></td>
                             <td>{{ project.created|naturalday }}</td>
                             <td>{% if not project|project_done %}
-                                <span class="glyphicon glyphicon-refresh spinning"></span> processing...
+                                <span class="glyphicon glyphicon-refresh spinning" aria-hidden="true"></span> processing...
                             {% else %}
                                 {% calc_finished_projects project as finished_count %}
                                 {{ finished_count|intcomma }}
                             {% endif %}</td>
                             <td>
                                 <div class="btn-group">
-                                    <a href="{% url 'website:project_detail' slug=project.slug %}" class="btn btn-primary"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> View</a>
-                                    <a href="{% url 'website:project_delete' slug=project.slug %}" class="btn btn-danger"{% if not project.enabled %} disabled="disabled"{% endif %}><span class="glyphicon glyphicon-trash" aria-hidden="true"></span><span class="sr-only">Delete</span></a>
+                                    <a href="{% url 'website:project_detail' slug=project.slug %}" role="button" class="btn btn-primary"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> View</a>
+                                    <a href="{% url 'website:project_delete' slug=project.slug %}" role="button" class="btn btn-danger"{% if not project.enabled %} disabled="disabled"{% endif %}><span class="glyphicon glyphicon-trash" aria-hidden="true"></span><span class="sr-only">Delete</span></a>
                                 </div>
                             </td>
                         </tr>
