--- a/website/templates/website/project_detail.html
+++ b/website/templates/website/project_detail.html
@@ -22,9 +22,10 @@
             </div>
             <div class="panel-body">
                 <div class="btn-group pull-right clearfix">
-                    <button type="button" class="btn btn-danger" onclick="window.location='{% url 'website:project_delete' slug=project.slug %}'">
-                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span><span class="sr-only">Delete</span>
-                    </button>
+                    {% if user.is_staff %}
+                        <a href="{% url 'admin:website_projectselector_change' object_id=project.pk %}" role="button" class="btn btn-default"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span><span class="sr-only">Edit</span></a>
+                    {% endif %}
+                    <a href="{% url 'website:project_delete' slug=project.slug %}" role="button" class="btn btn-danger"{% if not project.enabled %} disabled="disabled"{% endif %}><span class="glyphicon glyphicon-trash" aria-hidden="true"></span><span class="sr-only">Delete</span></a>
                 </div>
                 {% if not project.enabled %}
                     <div class="alert alert-danger">NOTE: this selector is deleted</div>
