--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -9,7 +9,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 text-center">
                 <img src="/media/overview.png"/>
             </div>
         </div>
