--- a/website/templates/website/project_detail.html
+++ b/website/templates/website/project_detail.html
@@ -27,8 +27,10 @@
                     <div class="alert alert-danger">NOTE: this selector is deleted</div>
                 {% endif %}
                 <div class="btn-group pull-right clearfix">
+                    <a href="" role="button" class="btn btn-default"><span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span><span class="sr-only">Duplicate</span></a>
                     {% if user.is_staff %}
                         <a href="{% url 'admin:website_projectselector_change' object_id=project.pk %}" role="button" class="btn btn-default"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span><span class="sr-only">Edit</span></a>
+                        <a href="" role="button" class="btn btn-warning"><span class="glyphicon glyphicon-repeat" aria-hidden="true"></span><span class="sr-only">Restart</span></a>
                     {% endif %}
                     <a href="{% url 'website:project_delete' slug=project.slug %}" role="button" class="btn btn-danger"{% if not project.enabled %} disabled="disabled"{% endif %}><span class="glyphicon glyphicon-trash" aria-hidden="true"></span><span class="sr-only">Delete</span></a>
                 </div>
@@ -40,9 +42,9 @@
                 <h4><strong>Projects Cloned:</strong> {{ cloned|intcomma }}</h4>
                 {% calc_finished_projects project as finished_count %}
                 {% calc_remaining_projects project as remaining_count %}
-                {% calc_remaining_percent finished_count remaining_count as remaining_count %}
+                {% calc_remaining_percent finished_count remaining_count as remaining_pct %}
                 {% if finished_count > 0 %}
-                    <h4><strong>Benchmark Projects:</strong> {{ finished_count|intcomma }}{% if not is_done %} ({{ remaining_count|intcomma }} still processing){% endif %}</h4>
+                    <h4><strong>Benchmark Projects:</strong> {{ finished_count|intcomma }}{% if not is_done %} ({{ remaining_pct|intcomma }}% still processing){% endif %}</h4>
                     {% if not is_done %}
                         <div class="progress">
                             <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: {{ calc_remaining_percent }}%">
