--- a/website/templates/website/transformers.html
+++ b/website/templates/website/transformers.html
@@ -1,7 +1,7 @@
 {% extends 'website/base.html' %}
 {% load calc_finished_projects %}
 {% load humanize %}
-{% block title %}Project Selections{% endblock %}
+{% block title %}Project Transformers{% endblock %}
 {% block projectsactive %}active{% endblock %}
 {% block style %}
 <style type="text/css">
