Add transformer delete and download

--- a/website/templates/website/transformer_detail.html
+++ b/website/templates/website/transformer_detail.html
@@ -30,7 +30,7 @@
                     {% if user.is_staff %}
                         <a href="{% url 'admin:website_projecttransformer_change' object_id=transformer.pk %}" role="button" class="btn btn-default"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span><span class="sr-only">Edit</span></a>
                     {% endif %}
-                    <a href="#" role="button" class="btn btn-danger"{% if not transformer.enabled %} disabled="disabled"{% endif %}><span class="glyphicon glyphicon-trash" aria-hidden="true"></span><span class="sr-only">Delete</span></a>
+                    <a href="{% url 'website:delete_transformer' slug=transformer.slug %}" role="button" class="btn btn-danger"{% if not transformer.enabled %} disabled="disabled"{% endif %}><span class="glyphicon glyphicon-trash" aria-hidden="true"></span><span class="sr-only">Delete</span></a>
                 </div>
                 <h4><strong>Transformer Submitted:</strong> {{ transformer.submitted|naturaltime }}</h4>
                 <h4><strong>Submitted By:</strong> {{ transformer.user }}</h4>
@@ -42,7 +42,7 @@
                 {% calc_remaining_percent finished_count transformer.transformed_projects.all.count as remaining_count %}
                 {% if finished_count > 0 %}
                     <h4><strong>Benchmark Projects:</strong> {{ finished_count|intcomma }}{% if not done %} ({{ remaining_count|intcomma }} still processing){% endif %}</h4>
-                    {% if not is_done %}
+                    {% if not done %}
                         <div class="progress">
                             <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: {{ calc_remaining_percent }}%">
                                 <span class="sr-only">{{ calc_remaining_percent }}% Complete</span>
@@ -56,12 +56,12 @@
                 {% if transformer.transform.status != 'PROCESSED' %}
                 <p style="padding-left: 20px;">Status: <em>{{ transformer.transform.status }}Status is not a field</em></p>
                 {% endif %}
-                {% if is_done %}
+                {% if done %}
                     <br/>
                     <h4><strong>Dataset Generated:</strong> {{ transformer.datetime_processed|naturaltime }}</h4>
                     {% if finished_count > 0 %}
                         {% if download_size > 0 %}
-                            <h3><strong><a href="{% url 'website:download' transformer.slug %}">Download Benchmark</a> (zip)</strong></h3>
+                            <h3><strong><a href="{% url 'website:download_transformer' transformer.slug %}">Download Benchmark</a> (zip)</strong></h3>
                             <h4>({{ download_size|filesizeformat|intcomma }})</h4>
                         {% else %}
                             {% if download_size == 0 %}
